--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length 22.5cm x Width 18cm x Height 18.5cm</td>
+                    <td>Dia 18cm x Height 16.5cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -208,3 +208,4 @@
     </div>
 </body>
 </html>
+
